--- a/catalog-item.html
+++ b/catalog-item.html
@@ -15,8 +15,8 @@
 					<ul>
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
-						<li><a href="#">Прайс-лист</a></li>
-						<li class="active-link"><a href="#">Магазин</a></li>
+						<li><a href="price.html">Прайс-лист</a></li>
+						<li class="active-link"><a href="catalog.html">Магазин</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -25,49 +25,51 @@
 				</div>
 			</div>
 		</header>
-		<main class="container clearfix">
+		<main class="container">
 			<h1>Набор для путешествий "Baxter of California"</h1>
 			<ul class="breadcrumbs">
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Магазин</a></li>
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="catalog.html">Магазин</a></li>
 				<li><a href="#">Средства для ухода</a></li>
 				<li>Набор для путешествий "Baxter of California"</li>
 			</ul>
-			<div class="gallery">
-				<img src="http://placehold.it/150x100" width="460" height="498">
-				<ul class="gallery-list">
-					<li class="gallery-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
-					</li>
-					<li class="gallery-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
-					</li>
-					<li class="gallery-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
-					</li>
-				</ul>
-			</div>
-			<div class="desc">
-				<div class="avail">
-					<p class="avail-item">Есть в наличии</p>
-					<p class="article">Артикул:DEXTER-AE</p>
+			<div class="item-box clearfix">
+				<div class="gallery">
+					<img src="http://placehold.it/150x100" width="460" height="498">
+					<ul class="gallery-list">
+						<li class="gallery-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
+						</li>
+						<li class="gallery-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
+						</li>
+						<li class="gallery-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
+						</li>
+					</ul>
 				</div>
-				<p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожанной сумке находиться все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, улважняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
-				<div class="price-buy">
-					<p>2 900 руб.</p>
-					<a class="btn" href="#">Купить</a>
+				<div class="desc">
+					<div class="avail clearfix">
+						<p class="avail-item">Есть в наличии</p>
+						<p class="item-article">Артикул:DEXTER-AE</p>
+					</div>
+					<p>Travel Kit - необходимый аксессуар во время любого путешествия. В аккуратной кожанной сумке находиться все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, улважняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+					<div class="price-buy">
+						<p>2 900 руб.</p>
+						<a class="btn" href="#">Купить</a>
+					</div>
+					<h2>В набор входят:</h2>                
+					<ul class="set-comp">
+						<li>Средство для умывания (50 мл)</li>
+						<li>Увлажняющий крем (50 мл)</li>
+						<li>Крем для бритья (50 мл)</li>
+						<li>Крем после бритья, шампунь (50 мл)</li>
+						<li>Удобная кожанная косметичка</li>
+					</ul>
 				</div>
-				<h2>В набор входят:</h2>                
-				<ul class="set-comp">
-					<li>Средство для умывания (50 мл)</li>
-					<li>Увлажняющий крем (50 мл)</li>
-					<li>Крем для бритья (50 мл)</li>
-					<li>Крем после бритья, шампунь (50 мл)</li>
-					<li>Удобная кожанная косметичка</li>
-				</ul>
 			</div>
 		</main>
-		<footer class="main-footer">
+		<footer class="main-footer clearfix">
 			<div class="container">
 				<section class="footer-contacts">
 					Барбершоп «Бородинский»<br>
