--- a/price.html
+++ b/price.html
@@ -15,8 +15,8 @@
 					<ul>
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
-						<li class="active-link"><a href="#">Прайс-лист</a></li>
-						<li><a href="#">Магазин</a></li>
+						<li class="active-link"><a href="price.html">Прайс-лист</a></li>
+						<li><a href="catalog.html">Магазин</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -28,7 +28,7 @@
 		<main class="container clearfix">
 			<h1>Прайс-лист</h1>
 			<ul class="breadcrumbs">
-				<li><a href="#">Главная</a></li>
+				<li><a href="index.html">Главная</a></li>
 				<li>Прайс-лист</li>
 			</ul>
 			<p class="price-title">Истинно мужская классика</p>
@@ -64,7 +64,7 @@
 				<p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь Вы можете погрузиться в удобную для Вас атмосферу, чувствовать себя комфортно и свободно!</p>
 			</div>
 		</main>
-		<footer class="main-footer">
+		<footer class="main-footer clearfix">
 			<div class="container">
 				<section class="footer-contacts">
 					Барбершоп «Бородинский»<br>
