--- a/catalog.html
+++ b/catalog.html
@@ -15,8 +15,8 @@
 					<ul>
 						<li><a href="#">Информация</a></li>
 						<li><a href="#">Новости</a></li>
-						<li><a href="#">Прайс-лист</a></li>
-						<li class="active-link"><a href="#">Магазин</a></li>
+						<li><a href="price.html">Прайс-лист</a></li>
+						<li class="active-link"><a href="catalog.html">Магазин</a></li>
 						<li><a href="#">Контакты</a></li>
 					</ul>
 				</nav>
@@ -25,97 +25,99 @@
 				</div>
 			</div>
 		</header>
-		<main class="container clerfix">
+		<main class="container">
 			<h1>Средства для ухода</h1>
 			<ul class="breadcrumbs">
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Магазин</a></li>
+				<li><a href="index.html">Главная</a></li>
+				<li><a href="catalog.html">Магазин</a></li>
 				<li>Средства для ухода</li>
 			</ul>
-			<div class="select">
-				<form class="care-form" action="#" method="get">
-					<fieldset>
-						<legend>Производители:</legend>
-						<label><input type="checkbox" name="baxter-of-california">Baxter of California</label><br>
-						<label><input type="checkbox" name="mr-natty">MR Natty</label><br>
-						<label><input type="checkbox" name="suavecito">Suavecito</label><br>
-						<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label><br>
-						<label><input type="checkbox" name="murrays">Murray's</label><br>
-						<label><input type="checkbox" name="american-crew">American Crew</label>
-					</fieldset>
-					<fieldset>
-						<legend>Группы товаров:</legend>
-						<label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label><br>
-						<label><input type="radio" name="question-products" value="care">Средства для ухода</label><br>
-						<label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
-					</fieldset>
-					<button type="submit">Показать</button>
-				</form>
-			</div>
-			<div class="catalog">
-				<article class="catalog-item">
-					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<a href="#"><p>Набор для путешествий</p>
-					<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-					<div class="price-buy">
-						<p>2 900 руб.</p>
-						<a class="btn" href="#">Купить</a>
-					</div>
-				</article>
-				<article class="catalog-item">
-					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<a href="#"><p>Увлажняющий кондиционер</p>
-					<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-					<div class="price-buy">
-						<p>750 руб.</p>
-						<a class="btn" href="#">Купить</a>
-					</div>
-				</article>
-				<article class="catalog-item">
-					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<a href="#"><p>Гель для волос</p>
-					<p class="item-brand">"SUAVECITO"</p></a>
-					<div class="price-buy">
-						<p>290 руб.</p>
-						<a class="btn" href="#">Купить</a>
-					</div>
-				</article>
-				<article class="catalog-item">
-					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<a href="#"><p>Глина для укладки волос</p>
-					<p class="item-brand">"AMERICAN CREW"</p></a>
-					<div class="price-buy">
-						<p>500 руб.</p>
-						<a class="btn" href="#">Купить</a>
-					</div>
-				</article>
-				<article class="catalog-item">
-					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<a href="#"><p>Гель для волос</p>
-					<p class="item-brand">"AMERICAN CREW"</p></a>
-					<div class="price-buy">
-						<p>300 руб.</p>
-						<a class="btn" href="#">Купить</a>
-					</div>
-				</article>
-				<article class="catalog-item">
-					<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-					<a href="#"><p>Набор для бритья</p>
-					<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-					<div class="price-buy">
-						<p>3 900 руб.</p>
-						<a class="btn" href="#">Купить</a>
-					</div>
-				</article>
-			</div>
-			<div class="pagination">
-				<a class="pagin-btn" href="#" >1</a>
-				<a class="active-btn pagin-btn" href="#">2</a>
-				<a class="pagin-btn" href="#">3</a>
-				<a class="pagin-btn" href="#">4</a>
+			<div class="catalog-box clearfix">
+				<div class="select">
+					<form class="care-form" action="#" method="get">
+						<fieldset>
+							<legend>Производители:</legend>
+							<label><input type="checkbox" name="baxter-of-california">Baxter of California</label><br>
+							<label><input type="checkbox" name="mr-natty">MR Natty</label><br>
+							<label><input type="checkbox" name="suavecito">Suavecito</label><br>
+							<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label><br>
+							<label><input type="checkbox" name="murrays">Murray's</label><br>
+							<label><input type="checkbox" name="american-crew">American Crew</label>
+						</fieldset>
+						<fieldset>
+							<legend>Группы товаров:</legend>
+							<label><input type="radio" name="question-products" value="razors">Бритвенные 	принадлежности</label><br>
+							<label><input type="radio" name="question-products" value="care">Средства для 	ухода</label><br>
+							<label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
+						</fieldset>
+						<button type="submit">Показать</button>
+					</form>
+				</div>
+				<div class="catalog">
+					<article class="catalog-item">
+						<a href="catalog-item.html"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+						<a href="catalog-item.html"><p>Набор для путешествий</p>
+						<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
+						<div class="price-buy">
+							<p>2 900 руб.</p>
+							<a class="btn" href="#">Купить</a>
+						</div>
+					</article>
+					<article class="catalog-item">
+						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+						<a href="#"><p>Увлажняющий кондиционер</p>
+						<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
+						<div class="price-buy">
+							<p>750 руб.</p>
+							<a class="btn" href="#">Купить</a>
+						</div>
+					</article>
+					<article class="catalog-item">
+						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+						<a href="#"><p>Гель для волос</p>
+						<p class="item-brand">"SUAVECITO"</p></a>
+						<div class="price-buy">
+							<p>290 руб.</p>
+							<a class="btn" href="#">Купить</a>
+						</div>
+					</article>
+					<article class="catalog-item">
+						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+						<a href="#"><p>Глина для укладки волос</p>
+						<p class="item-brand">"AMERICAN CREW"</p></a>
+						<div class="price-buy">
+							<p>500 руб.</p>
+							<a class="btn" href="#">Купить</a>
+						</div>
+					</article>
+					<article class="catalog-item">
+						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+						<a href="#"><p>Гель для волос</p>
+						<p class="item-brand">"AMERICAN CREW"</p></a>
+						<div class="price-buy">
+							<p>300 руб.</p>
+							<a class="btn" href="#">Купить</a>
+						</div>
+					</article>
+					<article class="catalog-item">
+						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+						<a href="#"><p>Набор для бритья</p>
+						<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
+						<div class="price-buy">
+							<p>3 900 руб.</p>
+							<a class="btn" href="#">Купить</a>
+						</div>
+					</article>
+				</div>
+				<div class="pagination">
+					<a class="pagin-btn" href="#" >1</a>
+					<a class="active-btn pagin-btn" href="#">2</a>
+					<a class="pagin-btn" href="#">3</a>
+					<a class="pagin-btn" href="#">4</a>
+				</div>
 			</div>
 		</main>
-		<footer class="main-footer">
+		<footer class="main-footer clearfix">
 			<div class="container">
 				<section class="footer-contacts">
 					Барбершоп «Бородинский»<br>
