--- a/catalog-item.html
+++ b/catalog-item.html
@@ -69,8 +69,8 @@
 				</div>
 			</div>
 		</main>
-		<footer class="main-footer clearfix">
-			<div class="container">
+		<footer class="main-footer">
+			<div class="container clearfix">
 				<section class="footer-contacts">
 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
