--- a/price.html
+++ b/price.html
@@ -64,8 +64,8 @@
 				<p>Наша мастерская расположена в центре города, поэтому сделать стильную стрижку можно в любое время, даже в обеденный перерыв. Здесь Вы можете погрузиться в удобную для Вас атмосферу, чувствовать себя комфортно и свободно!</p>
 			</div>
 		</main>
-		<footer class="main-footer clearfix">
-			<div class="container">
+		<footer class="main-footer">
+			<div class="container clearfix">
 				<section class="footer-contacts">
 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
