--- a/catalog.html
+++ b/catalog.html
@@ -53,72 +53,74 @@
 						<button type="submit">Показать</button>
 					</form>
 				</div>
-				<div class="catalog">
-					<article class="catalog-item">
-						<a href="catalog-item.html"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-						<a href="catalog-item.html"><p>Набор для путешествий</p>
-						<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-						<div class="price-buy">
-							<p>2 900 руб.</p>
-							<a class="btn" href="#">Купить</a>
-						</div>
-					</article>
-					<article class="catalog-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-						<a href="#"><p>Увлажняющий кондиционер</p>
-						<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-						<div class="price-buy">
-							<p>750 руб.</p>
-							<a class="btn" href="#">Купить</a>
-						</div>
-					</article>
-					<article class="catalog-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-						<a href="#"><p>Гель для волос</p>
-						<p class="item-brand">"SUAVECITO"</p></a>
-						<div class="price-buy">
-							<p>290 руб.</p>
-							<a class="btn" href="#">Купить</a>
-						</div>
-					</article>
-					<article class="catalog-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-						<a href="#"><p>Глина для укладки волос</p>
-						<p class="item-brand">"AMERICAN CREW"</p></a>
-						<div class="price-buy">
-							<p>500 руб.</p>
-							<a class="btn" href="#">Купить</a>
-						</div>
-					</article>
-					<article class="catalog-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-						<a href="#"><p>Гель для волос</p>
-						<p class="item-brand">"AMERICAN CREW"</p></a>
-						<div class="price-buy">
-							<p>300 руб.</p>
-							<a class="btn" href="#">Купить</a>
-						</div>
-					</article>
-					<article class="catalog-item">
-						<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-						<a href="#"><p>Набор для бритья</p>
-						<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-						<div class="price-buy">
-							<p>3 900 руб.</p>
-							<a class="btn" href="#">Купить</a>
-						</div>
-					</article>
-				</div>
-				<div class="pagination">
-					<a class="pagin-btn" href="#" >1</a>
-					<a class="active-btn pagin-btn" href="#">2</a>
-					<a class="pagin-btn" href="#">3</a>
-					<a class="pagin-btn" href="#">4</a>
+				<div class="catalog-wrapper clearfix">
+					<div class="catalog">
+						<article class="catalog-item">
+							<a href="catalog-item.html"><img src="http://placehold.it/150x100" 	width="220" height="165"></a>
+							<a href="catalog-item.html"><p>Набор для путешествий</p>
+							<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
+							<div class="price-buy">
+								<p>2 900 руб.</p>
+								<a class="btn" href="#">Купить</a>
+							</div>
+						</article>
+						<article class="catalog-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="220" 	height="165"></a>
+							<a href="#"><p>Увлажняющий кондиционер</p>
+							<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
+							<div class="price-buy">
+								<p>750 руб.</p>
+								<a class="btn" href="#">Купить</a>
+							</div>
+						</article>
+						<article class="catalog-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+							<a href="#"><p>Гель для волос</p>
+							<p class="item-brand">"SUAVECITO"</p></a>
+							<div class="price-buy">
+								<p>290 руб.</p>
+								<a class="btn" href="#">Купить</a>
+							</div>
+						</article>
+						<article class="catalog-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+							<a href="#"><p>Глина для укладки волос</p>
+							<p class="item-brand">"AMERICAN CREW"</p></a>
+							<div class="price-buy">
+								<p>500 руб.</p>
+								<a class="btn" href="#">Купить</a>
+							</div>
+						</article>
+						<article class="catalog-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+							<a href="#"><p>Гель для волос</p>
+							<p class="item-brand">"AMERICAN CREW"</p></a>
+							<div class="price-buy">
+								<p>300 руб.</p>
+								<a class="btn" href="#">Купить</a>
+							</div>
+						</article>
+						<article class="catalog-item">
+							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
+							<a href="#"><p>Набор для бритья</p>
+							<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
+							<div class="price-buy">
+								<p>3 900 руб.</p>
+								<a class="btn" href="#">Купить</a>
+							</div>
+						</article>
+					</div>
+					<div class="pagination">
+						<a class="pagin-btn" href="#" >1</a>
+						<a class="active-btn pagin-btn" href="#">2</a>
+						<a class="pagin-btn" href="#">3</a>
+						<a class="pagin-btn" href="#">4</a>
+					</div>
 				</div>
 			</div>
 		</main>
-		<footer class="main-footer clearfix">
-			<div class="container">
+		<footer class="main-footer">
+			<div class="container clearfix">
 				<section class="footer-contacts">
 					Барбершоп «Бородинский»<br>
 					Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
