--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Барбершоп. Набор для путешествий "Baxter of California"</title>
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header class="main-header">
 			<div class="container clearfix">
 				<a href="index.html" class="logo-block">
-					<img src="img/Logo.png" alt="Barbershop" width="111" height="24">
+					<img src="img/Logo-small.png" alt="Barbershop" width="111" height="24">
 				</a>
 				<nav class="main-navigation">
 					<ul>
