--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
+    <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
+  <body class="index-background">
     <header class="main-header">
       <div class="container clearfix">
         <nav class="main-navigation">
@@ -33,11 +34,13 @@
         </div>
         <div class="features-item">
           <h2 class="features-name">Круто</h2>
-          <p>Забудьте, как вы стриглись раньше. Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
+          <p>Забудьте, как вы стриглись раньше.<br> 
+						Мы сделаем из вас звезду футбола или кино! Во всяком случае внешне.</p>
         </div>
         <div class="features-item">
           <h2 class="features-name">Дорого</h2>
-          <p>Наши мастера — профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
+          <p>Наши мастера — профессионалы своего дела и<br> 
+						не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
         </div>
       </section>
       <div class="index-content clearfix">
