Декторативные элементы index

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -35,7 +35,7 @@
 				<li>Набор для путешествий "Baxter of California"</li>
 			</ul>
 			<div class="item-box clearfix">
-				<div class="gallery">
+				<div class="catalog-item-gallery">
 					<img src="http://placehold.it/150x100" width="460" height="498">
 					<ul class="gallery-list">
 						<li class="gallery-item">
