--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <h2 class="index-content-title">Фотогалерея</h2>
           <div class="gallery">
             <figure class="gallery-content">
-              <img src="img/photo-1.jpg" width="286" height="164" alt="">
+              <img src="img/hall.jpg" width="286" height="164" alt="">
             </figure>
             <button class="btn gallery-prev">Назад</button>
             <button class="btn gallery-next">Вперёд</button>
