--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
+	<body class="inner-page">
 		<header class="main-header">
 			<div class="container clearfix">
 				<a href="index.html" class="logo-block">
@@ -38,17 +38,17 @@
 					<form class="care-form" action="#" method="get">
 						<fieldset>
 							<legend>Производители:</legend>
-							<label><input type="checkbox" name="baxter-of-california">Baxter of California</label><br>
-							<label><input type="checkbox" name="mr-natty">MR Natty</label><br>
-							<label><input type="checkbox" name="suavecito">Suavecito</label><br>
-							<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label><br>
-							<label><input type="checkbox" name="murrays">Murray's</label><br>
+							<label><input type="checkbox" name="baxter-of-california">Baxter of California</label>
+							<label><input type="checkbox" name="mr-natty">MR Natty</label>
+							<label><input type="checkbox" name="suavecito">Suavecito</label>
+							<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label>
+							<label><input type="checkbox" name="murrays">Murray's</label>
 							<label><input type="checkbox" name="american-crew">American Crew</label>
 						</fieldset>
 						<fieldset>
 							<legend>Группы товаров:</legend>
-							<label><input type="radio" name="question-products" value="razors">Бритвенные 	принадлежности</label><br>
-							<label><input type="radio" name="question-products" value="care">Средства для 	ухода</label><br>
+							<label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label>
+							<label><input type="radio" name="question-products" value="care">Средства для ухода</label>
 							<label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
 						</fieldset>
 						<button type="submit">Показать</button>
@@ -58,11 +58,13 @@
 					<div class="catalog">
 						<article class="catalog-item">
 							<a href="catalog-item.html"><img src="http://placehold.it/150x100" 	width="220" height="165"></a>
-							<a href="catalog-item.html"><p>Набор для путешествий</p>
-							<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-							<div class="price-buy">
-								<p>2 900 руб.</p>
-								<a class="btn" href="#">Купить</a>
+							<div class="catalog-item-box">
+								<a href="catalog-item.html">Набор для путешествий<br>
+									<span class="item-brand">"BAXTER OF CALIFORNIA"</span></a>
+								<div class="catalog-buy">
+									<p>2 900 руб.</p>
+									<a class="btn" href="#">Купить</a>
+								</div>
 							</div>
 						</article>
 						<article class="catalog-item">
