--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
+	<body class="inner-page">
 		<header class="main-header">
 			<div class="container clearfix">
 				<a href="index.html" class="logo-block">
@@ -27,7 +27,7 @@
 			</div>
 		</header>
 		<main class="container">
-			<h1>Набор для путешествий "Baxter of California"</h1>
+			<h1>Набор для путешествий «Baxter of California»</h1>
 			<ul class="breadcrumbs">
 				<li><a href="index.html">Главная</a></li>
 				<li><a href="catalog.html">Магазин</a></li>
@@ -36,16 +36,16 @@
 			</ul>
 			<div class="item-box clearfix">
 				<div class="catalog-item-gallery">
-					<img src="http://placehold.it/150x100" width="460" height="498">
+					<img src="img/baxter-set-large.jpg" width="460" height="498">
 					<ul class="gallery-list">
 						<li class="gallery-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
+							<a href="#"><img src="img/baxter-set-small-1.jpg" width="140" height="149"></a>
 						</li>
 						<li class="gallery-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
+							<a href="#"><img src="img/baxter-set-small-2.jpg" width="140" height="149"></a>
 						</li>
 						<li class="gallery-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="140" height="149"></a>
+							<a href="#"><img src="img/baxter-set-small-3.jpg" width="140" height="149"></a>
 						</li>
 					</ul>
 				</div>
@@ -65,7 +65,7 @@
 						<li>Увлажняющий крем (50 мл)</li>
 						<li>Крем для бритья (50 мл)</li>
 						<li>Крем после бритья, шампунь (50 мл)</li>
-						<li>Удобная кожанная косметичка</li>
+						<li>Удобная кожаная косметичка</li>
 					</ul>
 				</div>
 			</div>
