--- a/price.html
+++ b/price.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
-	<body>
+	<body class="inner-page">
 		<header class="main-header">
 			<div class="container clearfix">
 				<a href="index.html" class="logo-block">
@@ -32,9 +32,10 @@
 				<li><a href="index.html">Главная</a></li>
 				<li>Прайс-лист</li>
 			</ul>
-			<p class="price-title">Истинно мужская классика</p>
+			<div class="big-heading">
+				<h2>Истинно мужская классика</h2>
+			</div>
 			<div class="best-resource">
-				<h2>Мы используем только лучшие средства:</h2>
 				<ul>
 					<li>Baxter of California</li>
 					<li>Mr Natty</li>
