--- a/catalog.html
+++ b/catalog.html
@@ -38,29 +38,65 @@
 					<form class="care-form" action="#" method="get">
 						<fieldset>
 							<legend>Производители:</legend>
-							<label><input type="checkbox" name="baxter-of-california">Baxter of California</label>
-							<label><input type="checkbox" name="mr-natty">MR Natty</label>
-							<label><input type="checkbox" name="suavecito">Suavecito</label>
-							<label><input type="checkbox" name="malin-goetz">Malin+Goetz</label>
-							<label><input type="checkbox" name="murrays">Murray's</label>
-							<label><input type="checkbox" name="american-crew">American Crew</label>
+							<label>
+								<input type="checkbox" name="baxter-of-california">
+								<span class="checkbox-indicator"></span>
+								Baxter of California
+							</label>
+							<label>
+								<input type="checkbox" name="mr-natty">
+								<span class="checkbox-indicator"></span>
+								MR Natty
+							</label>
+							<label>
+								<input type="checkbox" name="suavecito">
+								<span class="checkbox-indicator"></span>
+								Suavecito
+							</label>
+							<label>
+								<input type="checkbox" name="malin-goetz">
+								<span class="checkbox-indicator"></span>
+								Malin+Goetz
+							</label>
+							<label>
+								<input type="checkbox" name="murrays">
+								<span class="checkbox-indicator"></span>
+								Murray's
+							</label>
+							<label>
+								<input type="checkbox" name="american-crew">
+								<span class="checkbox-indicator"></span>
+								American Crew
+							</label>
 						</fieldset>
 						<fieldset>
 							<legend>Группы товаров:</legend>
-							<label><input type="radio" name="question-products" value="razors">Бритвенные принадлежности</label>
-							<label><input type="radio" name="question-products" value="care">Средства для ухода</label>
-							<label><input type="radio" name="question-products" value="accessories">Аксессуары</label>
+							<label>
+								<input type="radio" name="question-products" value="razors">
+								<span class="radio-indicator"></span>
+								Бритвенные принадлежности
+							</label>
+							<label>
+								<input type="radio" name="question-products" value="care">
+								<span class="radio-indicator"></span>
+								Средства для ухода
+							</label>
+							<label>
+								<input type="radio" name="question-products" value="accessories">
+								<span class="radio-indicator"></span>
+								Аксессуары
+							</label>
 						</fieldset>
-						<button type="submit">Показать</button>
+						<button type="submit" class="btn care-form-btn">Показать</button>
 					</form>
 				</div>
 				<div class="catalog-wrapper clearfix">
 					<div class="catalog">
 						<article class="catalog-item">
-							<a href="catalog-item.html"><img src="http://placehold.it/150x100" 	width="220" height="165"></a>
+							<a href="catalog-item.html"><img src="img/baxter-set.jpg" 	width="220" height="165"></a>
 							<div class="catalog-item-box">
 								<a href="catalog-item.html">Набор для путешествий<br>
-									<span class="item-brand">"BAXTER OF CALIFORNIA"</span></a>
+									<span class="item-brand">«Baxter of California»</span></a>
 								<div class="catalog-buy">
 									<p>2 900 руб.</p>
 									<a class="btn" href="#">Купить</a>
@@ -68,48 +104,58 @@
 							</div>
 						</article>
 						<article class="catalog-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="220" 	height="165"></a>
-							<a href="#"><p>Увлажняющий кондиционер</p>
-							<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-							<div class="price-buy">
-								<p>750 руб.</p>
-								<a class="btn" href="#">Купить</a>
+							<a href="#"><img src="img/baxter-lotion.jpg" width="220" 	height="165"></a>
+							<div class="catalog-item-box">
+								<a href="catalog-item.html">Увлажнающий кондиционер<br>
+									<span class="item-brand">«Baxter of California»</span></a>
+								<div class="catalog-buy">
+									<p>750 руб.</p>
+									<a class="btn" href="#">Купить</a>
+								</div>
 							</div>
 						</article>
 						<article class="catalog-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-							<a href="#"><p>Гель для волос</p>
-							<p class="item-brand">"SUAVECITO"</p></a>
-							<div class="price-buy">
-								<p>290 руб.</p>
-								<a class="btn" href="#">Купить</a>
+							<a href="#"><img src="img/suavetico-gel.jpg" width="220" height="165"></a>
+							<div class="catalog-item-box">
+								<a href="catalog-item.html">Гель для волос<br>
+									<span class="item-brand">«SUAVECITO»</span></a>
+								<div class="catalog-buy">
+									<p>290 руб.</p>
+									<a class="btn" href="#">Купить</a>
+								</div>
 							</div>
 						</article>
 						<article class="catalog-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-							<a href="#"><p>Глина для укладки волос</p>
-							<p class="item-brand">"AMERICAN CREW"</p></a>
-							<div class="price-buy">
-								<p>500 руб.</p>
-								<a class="btn" href="#">Купить</a>
+							<a href="#"><img src="img/crew-clay.jpg" width="220" height="165"></a>
+							<div class="catalog-item-box">
+								<a href="catalog-item.html">Гель для укладки волос<br>
+									<span class="item-brand">«American crew»</span></a>
+								<div class="catalog-buy">
+									<p>500 руб.</p>
+									<a class="btn" href="#">Купить</a>
+								</div>
 							</div>
 						</article>
 						<article class="catalog-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-							<a href="#"><p>Гель для волос</p>
-							<p class="item-brand">"AMERICAN CREW"</p></a>
-							<div class="price-buy">
-								<p>300 руб.</p>
-								<a class="btn" href="#">Купить</a>
+							<a href="#"><img src="img/crew-gel.jpg" width="220" height="165"></a>
+							<div class="catalog-item-box">
+								<a href="catalog-item.html">Гель для волос<br>
+									<span class="item-brand">«American crew»</span></a>
+								<div class="catalog-buy">
+									<p>300 руб.</p>
+									<a class="btn" href="#">Купить</a>
+								</div>
 							</div>
 						</article>
 						<article class="catalog-item">
-							<a href="#"><img src="http://placehold.it/150x100" width="220" height="165"></a>
-							<a href="#"><p>Набор для бритья</p>
-							<p class="item-brand">"BAXTER OF CALIFORNIA"</p></a>
-							<div class="price-buy">
-								<p>3 900 руб.</p>
-								<a class="btn" href="#">Купить</a>
+							<a href="#"><img src="img/baxter-shaving.jpg" width="220" height="165"></a>
+							<div class="catalog-item-box">
+								<a href="catalog-item.html">Набор для бритья<br>
+									<span class="item-brand">«Baxter of California»</span></a>
+								<div class="catalog-buy">
+									<p>3 900 руб.</p>
+									<a class="btn" href="#">Купить</a>
+								</div>
 							</div>
 						</article>
 					</div>
